frontend/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
# Set the number of pods to run and access the Docker image and contained
spec:
  selector:
    matchLabels:
      app: react-app
  replicas: 1
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: docker1509/frontendapp-react:latest
          ports:
            - containerPort: 3000
