frontend/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - host: uploadfileapp.com
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: react-app
                port:
                  number: 3000
